test/implicitDup26.slq

def main(){
	x:=H(1);
    y:=!x;
	if x{
		x:=X(x); /// error
    }
    return (x,y);
}
